finish history function